# aitraf

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.train  Makefile  README.md  Taskfile.yml  agents.md  compose.yaml  environment.yml  paths.py  pyproject.toml
.devcontainer/: .dockerfile  Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: publish-docker-images.yml  publish-train-image.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
configs/: base.yaml  config.yaml  data.yaml  data_ops.yaml  eval.yaml  label_ops.yaml  pose_tcn.yaml  prepare.yaml  train.yaml  train_eval.yaml  video_mae.yaml
configs/data/: default.yaml
configs/data_ops/: default.yaml
configs/dataset/: manifests.yaml
configs/experiment/: gaussian_sampling.yaml  uniform_sampling.yaml
configs/label_studio/: default.yaml
configs/logging/: wandb.yaml
configs/manifests/: default.yaml
configs/model/: pose_tcn.yaml  video_mae.yaml  video_mae_temporal_fusion.yaml  videomae_base.yaml
configs/pose_tcn/: debug.yaml  default.yaml
configs/task/: score_prediction.yaml  score_prediction_binary.yaml  score_prediction_ordinal.yaml  score_prediction_pairwise.yaml  score_prediction_rank.yaml  trick_classification.yaml
configs/training/: default.yaml
configs/video_mae/: debug.yaml  default.yaml  full.yaml  head.yaml
configs_v2/: data_ops.yaml  eval.yaml  experiment.yaml  train.yaml  train_eval.yaml
configs_v2/model/: pose_tcn.yaml  video_mae.yaml
configs_v2/task/: score_prediction.yaml  trick_classification.yaml
data/: labeled.parquet  labels.jsonl  pairwise_labels.jsonl
data/manifests/: labels.json  test.jsonl  train.jsonl  val.jsonl  vocab.json
data/v1/: data-00000-of-00001.arrow  dataset_info.json  state.json
mlruns/0/: meta.yaml
notebooks/: 1-testing_open_pose.ipynb  1-testing_pose_estimation.ipynb  10-ratings-examples.ipynb  12-pairwise-rank-stats.ipynb  13-pair-k-comparison.ipynb  13-pairs-k-comparison.ipynb  14-label-consistency-pairwise-v1.ipynb  14-pairwise-label-consistency.ipynb  15-sample-current-clips.ipynb  16-label-consistency-ordinal-v1.ipynb  16-sampled-label-consistency.ipynb  17-find-delete-unlabeled-clips.ipynb  19-filter-execution-score-annotations.ipynb  2-simple_clips_eda.ipynb  2-simple_dataset_eda.ipynb  20-miss-sampling-plot-demo.ipynb  21-label-consistency-ordinal-v2.ipynb  3-clip_processing.ipynb  3-intiial_hf_dataset.ipynb  3-testing_bbox_pose_extraction.ipynb  4-initial_fine_tuning.ipynb  4-testing_video_mae_processor.ipynb  5-testing_pose_tcn_processor.ipynb  5-testing_selection.ipynb  6-trick_taxonomies.ipynb  7-dataset-stats.ipynb  8-pose-bbox-display.ipynb  9-manifest-stats.ipynb  convert_mov_to_mp4.ipynb  infra-testing.ipynb  intiial_hf_dataset.ipynb  test.ipynb  testing_open_pose.ipynb
scripts/: build_manifests.py  data_ops_pipeline.py  data_pipeline.py  eval.py  label_ops_pipeline.py  prepare.py  pull_ls.py  train.py  train_eval.py
scripts/pose_tcn/: eval.py  train.py  train_eval.py
scripts/video_mae/: eval.py  train.py  train_eval.py
(+262 files in other folders)
