[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitraf"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "torchcodec",
    "transformers",
    "accelerate",
    "datasets",
    "huggingface-hub",
    "hydra-core",
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "label-studio-sdk",
    "boto3",
    "python-dotenv",
    "loguru",
    "mlflow",
    "ultralytics",
    "evaluate>=0.4.6",
    "av>=16.0.1",
    "imageio>=2.37.2",
    "kornia>=0.8.2",
]

[dependency-groups]
dev = [
    "ruff", 
    "pytest", 
    "ipykernel", 
    "ipywidgets"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchcodec = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
