[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitraf"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aitraf-api",
    "aitraf-core",
    "aitraf-train",
]

[dependency-groups]
dev = [
    "ruff", 
    "pytest", 
    "ipykernel", 
    "ipywidgets"
]

[tool.ruff]
extend-exclude = ["notebooks"]

[tool.uv.sources]
aitraf-api = { workspace = true }
aitraf-core = { workspace = true }
aitraf-train = { workspace = true }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchcodec = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = [
    "packages/aitraf-api",
    "packages/aitraf-core",
    "packages/aitraf-train",
]
